[feat]: 增加DNN的调用逻辑
1. 在mlp的基础上进行通用化处理，隐藏层，输出层节点数，激活函数等可以通过配置文件进行配置

--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -7,3 +7,7 @@ model:
     batch_size: 50
     learning_rate: 0.001
     optimizer: Adam
+    classes: 10
+    deep:
+        units: [100]
+        activation: relu
