[feat]: 配置文件中增加wide model的配置
1. 在配置文件中增加针对wide model的相关配置，activation、classes等

--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -4,10 +4,13 @@
 
 model:
     num_epoches: 5
-    batch_size: 6
+    batch_size: 128
     learning_rate: 0.001
     optimizer: Adam
     classes: 10
     deep:
         units: [100]
         activation: relu
+
+    wide:
+        activation: softmax
