--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -3,8 +3,9 @@
 ########################################################
 
 model:
-    num_epoches: 15
-    batch_size: 128
+    num_epoches: 1000
+    seq_length: 40
+    batch_size: 50
     learning_rate: 0.001
     optimizer: Adam
     classes: 10
