[feat]: 增加自定义数据读取
1. 增加通过自定以的方法进行数据读取，暂时支持到csv的数据格式读取
2. 相关参数通过conf.yaml中的dataset模块进行配置
3. 使用到的测试数据来自avazu的数据集

--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -2,6 +2,15 @@
 ## the configure data for models
 ########################################################
 
+dataset:
+    train_path: ./datas/train/train_data.txt
+    test_path: ./datas/test/test_data.txt
+    label_name: click
+    type: csv
+    params:
+        header: 0
+        sep: ','
+
 model:
     num_episodes: 500
     num_exploration_episodes: 100
