[feat]: 增加针对自定义数据格式的读取和配置

--- a/conf/conf.yaml
+++ b/conf/conf.yaml
@@ -8,6 +8,7 @@ dataset:
     test_path: ./datas/test/test_data.txt
     label_name: click
     type: csv
+    batch_size: 32
     params:
         header: True
         sep: ','
