[refactor]: 重构feature_columnns配置文件中的配置参数名
1. sparse_features的column -> column_type

--- a/conf/feature.yaml
+++ b/conf/feature.yaml
@@ -30,7 +30,7 @@ continuous_features:
 
 sparse_features:
     s1:
-        column: vocab
+        column_type: vocab
         params:
 
 embedding_features:
