[fix]: 配置文件新增针对sequence特征的长度截断说明

--- a/examples/conf/feature.yaml
+++ b/examples/conf/feature.yaml
@@ -145,10 +145,12 @@ geo_hash_sample:
 history_item_id_clicked:
   type: 'sequence'
   base_col: 'item_id'
+  len: 10
 
 history_item_type_clicked:
   type: 'sequence'
   base_col: 'item_type'
+  len: 10
 
 history_item_geohash_clicked:
   type: 'no-use'
