--- a/examples/conf/conf.yaml
+++ b/examples/conf/conf.yaml
@@ -34,6 +34,7 @@ train:
     loss: reduce_sum_sparse_categorical_crossentropy
 
 run:
-    max_steps: 20000
-    eval_steps: 1000
-    eval_gap: 5000
+    epoches: 20
+    train_steps: 10000
+    loss_steps: 5000
+    eval_steps: 2000
